--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -1,152 +1,62 @@
-name: 'Combine PRs'
+name: Merge Dependabot PRs
 
-# Controls when the action will run - in this case triggered manually
 on:
   workflow_dispatch:
     inputs:
-      branchPrefix:
-        description: 'Branch prefix to find combinable PRs based on'
+      branch:
+        description: 'Branch to merge PRs into'
         required: true
-        default: 'dependabot'
-      mustBeGreen:
-        description: 'Only combine PRs that are green (status is success). Set to false if repo does not run checks'
-        type: boolean
-        required: true
-        default: true
-      combineBranchName:
-        description: 'Name of the branch to combine PRs into'
-        required: true
-        default: 'combine-prs-branch'
-      ignoreLabel:
-        description: 'Exclude PRs with this label'
-        required: true
-        default: 'nocombine'
+        default: 'main'
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "combine-prs"
-  combine-prs:
-    # The type of runner that the job will run on
+  merge-dependabot-prs:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/github-script@v6
-        id: create-combined-pr
-        name: Create Combined PR
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Merge Dependabot PRs
+        id: merge-prs
+        uses: actions/github-script@v7
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const branchToMergeInto = '${{ github.event.inputs.branch }}';
+            
+            // Get open pull requests authored by dependabot
             const pulls = await github.paginate('GET /repos/:owner/:repo/pulls', {
               owner: context.repo.owner,
-              repo: context.repo.repo
+              repo: context.repo.repo,
+              state: 'open',
+              head: 'dependabot',
             });
-            let branchesAndPRStrings = [];
-            let baseBranch = null;
-            let baseBranchSHA = null;
-            for (const pull of pulls) {
-              const branch = pull['head']['ref'];
-              console.log('Pull for branch: ' + branch);
-              if (branch.startsWith('${{ github.event.inputs.branchPrefix }}')) {
-                console.log('Branch matched prefix: ' + branch);
-                let statusOK = true;
-                if(${{ github.event.inputs.mustBeGreen }}) {
-                  console.log('Checking green status: ' + branch);
-                  const stateQuery = `query($owner: String!, $repo: String!, $pull_number: Int!) {
-                    repository(owner: $owner, name: $repo) {
-                      pullRequest(number:$pull_number) {
-                        commits(last: 1) {
-                          nodes {
-                            commit {
-                              statusCheckRollup {
-                                state
-                              }
-                            }
-                          }
-                        }
-                      }
-                    }
-                  }`
-                  const vars = {
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    pull_number: pull['number']
-                  };
-                  const result = await github.graphql(stateQuery, vars);
-                  const [{ commit }] = result.repository.pullRequest.commits.nodes;
-                  const state = commit.statusCheckRollup.state
-                  console.log('Validating status: ' + state);
-                  if(state != 'SUCCESS') {
-                    console.log('Discarding ' + branch + ' with status ' + state);
-                    statusOK = false;
-                  }
-                }
-                console.log('Checking labels: ' + branch);
-                const labels = pull['labels'];
-                for(const label of labels) {
-                  const labelName = label['name'];
-                  console.log('Checking label: ' + labelName);
-                  if(labelName == '${{ github.event.inputs.ignoreLabel }}') {
-                    console.log('Discarding ' + branch + ' with label ' + labelName);
-                    statusOK = false;
-                  }
-                }
-                if (statusOK) {
-                  console.log('Adding branch to array: ' + branch);
-                  const prString = '#' + pull['number'] + ' ' + pull['title'];
-                  branchesAndPRStrings.push({ branch, prString });
-                  baseBranch = pull['base']['ref'];
-                  baseBranchSHA = pull['base']['sha'];
-                }
-              }
-            }
-            if (branchesAndPRStrings.length == 0) {
-              core.setFailed('No PRs/branches matched criteria');
+
+            if (pulls.length === 0) {
+              console.log('No open pull requests authored by dependabot.');
               return;
             }
-            try {
-              await github.rest.git.createRef({
+
+            // Merge pull requests with a green status check
+            for (const pull of pulls) {
+              const prNumber = pull.number;
+              const status = await github.repos.getCombinedStatusForRef({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                ref: 'refs/heads/' + '${{ github.event.inputs.combineBranchName }}',
-                sha: baseBranchSHA
+                ref: pull.head.sha,
               });
-            } catch (error) {
-              console.log(error);
-              core.setFailed('Failed to create combined branch - maybe a branch by that name already exists?');
-              return;
-            }
-            
-            let combinedPRs = [];
-            let mergeFailedPRs = [];
-            for(const { branch, prString } of branchesAndPRStrings) {
-              try {
+
+              if (status.data.state === 'success') {
+                console.log(`Merging PR #${prNumber} into ${branchToMergeInto}`);
                 await github.rest.repos.merge({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
-                  base: '${{ github.event.inputs.combineBranchName }}',
-                  head: branch,
+                  base: branchToMergeInto,
+                  head: `refs/pull/${prNumber}/head`,
                 });
-                console.log('Merged branch ' + branch);
-                combinedPRs.push(prString);
-              } catch (error) {
-                console.log('Failed to merge branch ' + branch);
-                mergeFailedPRs.push(prString);
+              } else {
+                console.log(`Skipping PR #${prNumber} because it does not have a green status.`);
               }
             }
-            
-            console.log('Creating combined PR');
-            const combinedPRsString = combinedPRs.join('\n');
-            let body = '✅ This PR was created by the Combine PRs action by combining the following PRs:\n' + combinedPRsString;
-            if(mergeFailedPRs.length > 0) {
-              const mergeFailedPRsString = mergeFailedPRs.join('\n');
-              body += '\n\n⚠️ The following PRs were left out due to merge conflicts:\n' + mergeFailedPRsString
-            }
-            await github.rest.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: 'Combined PR',
-              head: '${{ github.event.inputs.combineBranchName }}',
-              base: baseBranch,
-              body: body
-            });
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
