--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '16'
 
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.4.3  # Use a version that supports Node.js 16
 
       - name: Merge Dependabot PRs
         id: merge-prs
