--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -1,81 +1,48 @@
-name: Combine PRs
+name: Auto Merge and Close Branches
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
-  merge-dependabot-prs:
+  merge_and_close:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
+    - name: Check out code
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
+    - name: Install jq
+      run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Run script to merge PRs
-        run: |
-          const branchToMergeInto = 'main';
+    - name: Set up Git
+      run: |
+        git config user.name "milliorn"
+        git config user.email "scottmilliorn@gmail.com"
 
-          const pulls = await github.paginate(
-            {
-              method: 'GET',
-              url: '/repos/:owner/:repo/pulls',
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              head: 'dependabot',
-            }
-          );
+    - name: Merge PR
+      run: |
+        # Extract the pull request number from the GitHub event payload
+        PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
 
-          if (pulls.length === 0) {
-            console.log('No open pull requests authored by dependabot.');
-          } else {
-            console.log(`Found ${pulls.length} open pull request(s) authored by dependabot.`);
+        # Merge the PR
+        git fetch origin pull/$PR_NUMBER/head:pr-$PR_NUMBER
+        git checkout main
+        git merge pr-$PR_NUMBER --no-edit
+        git push origin main
 
-            for (const pull of pulls) {
-              const prNumber = pull.number;
+    - name: Close branches
+      run: |
+        # Extract the source and target branches from the PR
+        SOURCE_BRANCH=$(jq --raw-output .pull_request.head.ref "$GITHUB_EVENT_PATH")
+        TARGET_BRANCH=$(jq --raw-output .pull_request.base.ref "$GITHUB_EVENT_PATH")
 
-              try {
-                console.log(`Checking status for PR #${prNumber} with sha ${pull.head.sha}`);
-                const statusResponse = await github.rest.repos.getCombinedStatusForRef({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  ref: pull.head.sha,
-                });
+        # Delete the source branch
+        git push origin --delete $SOURCE_BRANCH
 
-                if (!statusResponse.data) {
-                  console.log(`Skipping PR #${prNumber} because status information is not available.`);
-                  continue;
-                }
-
-                const status = statusResponse.data.state;
-
-                console.log(`Status of PR #${prNumber}: ${status}`);
-
-                if (status === 'success') {
-                  console.log(`Merging PR #${prNumber} into ${branchToMergeInto}`);
-                  await github.rest.repos.merge({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    base: branchToMergeInto,
-                    head: `refs/pull/${prNumber}/head`,
-                  });
-                  console.log(`PR #${prNumber} merged successfully.`);
-                } else {
-                  console.log(`Skipping PR #${prNumber} because it does not have a green status.`);
-                }
-              } catch (error) {
-                console.error(`Error processing PR #${prNumber}:`, error.message);
-              }
-            }
-          }
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # Delete the target branch if it's not the main branch
+        if [ "$TARGET_BRANCH" != "main" ]; then
+          git push origin --delete $TARGET_BRANCH
+        fi
