--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -1,11 +1,8 @@
 name: Auto Merge and Close Branches
 
 on:
-  pull_request:
-    types:
-      - opened
-      - synchronize
-
+  workflow_dispatch:
+  
 jobs:
   merge_and_close:
     runs-on: ubuntu-latest
@@ -19,8 +16,8 @@ jobs:
 
     - name: Set up Git
       run: |
-        git config user.name "milliorn"
-        git config user.email "scottmilliorn@gmail.com"
+        git config user.name "Your GitHub Username"
+        git config user.email "your.email@example.com"
 
     - name: Merge PR
       run: |
