--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Check if PR is from Dependabot
+        run: |
+          if [[ "${{ github.event.pull_request.user.login }}" != "dependabot[bot]" ]]; then
+            echo "Exiting early - expected PR by 'dependabot[bot]', found '${{ github.event.pull_request.user.login }}' instead."
+            exit 0
+          fi
+
       - name: Auto-merge Dependabot PRs
         uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
