--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,14 +1,41 @@
-name: auto-merge
+name: Auto-Merge Dependabot PR
 
 on:
   pull_request:
+    types:
+      - opened
+
+permissions:
+  pull-requests: write
+  contents: write
 
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          target: minor
-          github-token: ${{ secrets.mytoken }}
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Auto-Merge Dependabot PR
+        if: startsWith(github.actor, 'dependabot[bot]') && github.event_name == 'pull_request'
+        run: |
+          # Check if it's safe to merge (customize this condition based on your requirements)
+          if [ "${{ github.event.pull_request.state }}" == "open" ]; then
+            # Merge the pull request
+            gh pr merge --auto --merge "${{ github.event.pull_request.html_url }}"
+            
+            # Close the branch
+            git push origin --delete "${{ github.event.pull_request.head.ref }}"
+          fi
+          
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
