--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sindarin-quenya-translator",
+  "name": "lord-of-the-rings-language-translator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
