--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "lord-of-the-rings-language-translator",
   "private": true,
+  "homepage": "http://milliorn.github.io/lord-of-the-rings-language-translator",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
